Make sure header is not too big

--- a/css/src/admin-global.css
+++ b/css/src/admin-global.css
@@ -871,6 +871,7 @@ body.folded .wpseo-admin-submit-fixed {
 
 #black-friday-2024-promotion-sidebar .notice-yoast__header {
 	margin-bottom: 2px;
+    padding-right: 20px;
 }
 
 #black-friday-2024-promotion-metabox.notice-yoast {
